# pocketpal

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  __main__.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: precommit.yml
models/: address_book.py  notes.py
src/: __init__.py  __main__.py  actions.py  actions_notes.py  address_book.py  autocomplete.py  commands.py  custom_console.py  error_handlers.py  file_operations.py  notes.py  pocketpal.py  visualisation.py
utils/: actions.py
